# x2cdict

./: README.md  README.rst  entry.py  pyproject.toml
.github/workflows/: main.yml  testpypi.yml
tests/: test_db_db.py  test_dictapi.py  test_google.py  test_lib.py  test_posmap.py  test_qishe.py  test_x2cdict.py
x2cdict/: __init__.py  db.py  deeplearning.py  dictapi.py  entry.py  google.py  lib.py  play.py  pos_map.py  posmap.py  qishe.py
x2cdict/db/: __init__.py  db.py  de2cn.py  en2cn.py  es2cn.py
