[tool.poetry]
name = "x2cdict"
version = "0.1.27"
description = ""
authors = ["Phoenix Grey <phoenix.grey0108@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
googletrans = "^2.4.0"
click = "^7.1.1"
pymongo = "^3.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
vocab = "entry:search_vocab"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
