[tool.poetry]
name = "x2cdict"
version = "0.1.48"
description = "translate X language into Chinese"
authors = ["Phoenix Grey <phoenix.grey0108@gmail.com>"]
readme = "README.md"
repository = "https://github.com/qishe-nlp/x2cdict"
keywords = ["language", "dictionary", "Chinese"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.10.1"
googletrans = "4.0.0-rc1"
click = "^8.0.3"
deepl = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
x2cdict_vocab = "x2cdict.entry:search_vocab"
x2cdict_vocab_without_pos = "x2cdict.entry:search_vocab_without_pos"
x2cdict_phrase = "x2cdict.entry:search_phrase"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
